# air-quality-smart-sensors-network

./: CMakeLists.txt  prj.conf
sensor_SPS30/: main.c  nrf52840dk_nrf52840.overlay
sensors/sps30/: hal.c  sps30.c
src/: ccs811.c  main.bak.c  main.c  temp.c
